Fixes #914: Aligned settings tab

--- a/src/app/feed/feed-advanced-search/feed-advanced-search.component.scss
+++ b/src/app/feed/feed-advanced-search/feed-advanced-search.component.scss
@@ -46,7 +46,7 @@ div.wrapper{
 		display: flex;
 		flex-direction: row;
 		align-items: baseline;
-		margin-left: 15vw;
+		margin-left: 9vw;
 		button {
 			outline: none;
 		}
